# erp-safe-write-gui

./: .gitignore  CLAUDE.md  EstShipUploader.bat  LICENSE  README.md  pyproject.toml
config/: config.example.ini
docs/: implementation-notes.md
sample_data/: example_itemclass.csv  example_mfglt.csv  example_reordpt.csv  example_reordqty.csv  example_upload.csv  test_mfglt_multiwarehouse.csv
scripts/: build_exe.py
src/estship_uploader/: __main__.py  backup.py  config.py  connection.py  csv_parser.py  errors.py  formatting.py  gui.py  itemclass_csv_parser.py  itemclass_pipeline.py  itemclass_updater.py  itemclass_validators.py  main.py  mfglt_csv_parser.py  mfglt_pipeline.py  mfglt_updater.py  mfglt_validators.py  models.py  pipeline.py  reordpt_csv_parser.py  reordpt_pipeline.py  reordpt_updater.py  reordpt_validators.py  reordqty_csv_parser.py  reordqty_pipeline.py  reordqty_updater.py  reordqty_validators.py  tabbed_gui.py  updater.py  validators.py
tests/: conftest.py  test_backup.py  test_csv_parser.py  test_itemclass_csv_parser.py  test_itemclass_pipeline.py  test_itemclass_updater.py  test_itemclass_validators.py  test_mfglt_csv_parser.py  test_mfglt_pipeline.py  test_mfglt_updater.py  test_mfglt_validators.py  test_pipeline.py  test_updater.py  test_validators.py
